--- a/index.html
+++ b/index.html
@@ -30,6 +30,94 @@
         </a>
     </div>
 
+    <div class="container-fluid wrapper2 p-0">
+        <div class="row g-0">
+            <div class="col-md-6 border border-0" style="background-color: #13131A;">
+                <img src="photos/image10.jpeg" alt="photo" class="image-size">
+            </div>
+            <div class="col-md-6 border border-0 content-2">
+                <span><small>OUR HISTORY</small></span>
+                <h1>CREATE A NEW STORY WITH US</h1>
+                <p>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibhtincidunt.</p>
+                <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo mattis. Aliquam erat volutpat.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="container-fluid wrapper">
+        <div class="row">
+            <div class="col-sm-6 col-lg-4 col-wrapper">
+                <div class="card card-1">
+                    <img src="photos/image3.png" alt="shape" class="shape">
+                    <div class="content">
+                        <span>01</span>
+                        <h2>Best Coffee flavour</h2>
+                        <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                        <a href="#" class="read">Read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-wrapper">
+                <div class="card card-2">
+                    <img src="photos/image3.png" alt="shape" class="shape">
+                    <div class="content">
+                        <span>02</span>
+                        <h2>Place to Get Lost</h2>
+                        <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                        <a href="#" class="read">Read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-wrapper">
+                <div class="card card-3">
+                    <img src="photos/image3.png" alt="shape" class="shape">
+                    <div class="content">
+                        <span>03</span>
+                        <h2>Proper Roesting</h2>
+                        <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                        <a href="#" class="read">Read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-wrapper">
+                <div class="card card-4">
+                    <img src="photos/image3.png" alt="shape" class="shape">
+                    <div class="content">
+                        <span>04</span>
+                        <h2>Place to Get Lost</h2>
+                        <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                        <a href="#" class="read">Read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-wrapper">
+                <div class="card card-5">
+                    <img src="photos/image3.png" alt="shape" class="shape">
+                    <div class="content">
+                        <span>05</span>
+                        <h2>Best Coffee flavour</h2>
+                        <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                        <a href="#" class="read">Read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-wrapper">
+                <div class="card card-6">
+                    <img src="photos/image3.png" alt="shape" class="shape">
+                    <div class="content">
+                        <span>06</span>
+                        <h2>Proper Roesting</h2>
+                        <p>Curabitur semper erat a lacusey sedn consequat, sit ametey.</p>
+                        <a href="#" class="read">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <section class="contact-us">
         <div class="container-fluid p-0">
@@ -64,6 +152,37 @@
             </div>
         </div>
     </section>
+
+
+    <div class="container-fluid footer">
+        <div class="shade"></div>
+        <div class="address">
+            <div>
+                <img src="photos/image12.png" alt="logo" style="margin-right: 12px;"><strong>PHONE :</strong>
+                    +88019 339 702 520
+            </div>
+            <div>
+                <img src="photos/image13.png" alt="logo" style="margin-right: 12px;"><strong>ADDRESS :</strong> kaloor, kochi, kerala
+            </div>
+            <form>
+                <div class="input-group">
+                    <input type="email" name="email" placeholder="Enter Your Email" class="form-control"><button type="submit" name="submit" class="btn subcribe">Subcribe</button>
+                </div>
+            </form>
+        </div>
+
+        <div class="footer-text">
+            <div>
+                <img src="photos/image1.png" alt="logo">
+                Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam <br>venenatis fringilla. Morbi vestibulum
+            </div>
+            <div class="social">
+                <a href="#"><i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-square-twitter" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+            </div>
+        </div>
+    </div>
 
 
     <script src="bootstrap-5.0.2-dist/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
