--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>coffee shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="bootstrap-5.0.2-dist/bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
@@ -29,6 +31,32 @@
             <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
         </a>
     </div>
+
+
+    <div class="owl-carousel owl-theme">
+        <div class="item item-1">
+            <div class="shape-2"></div>
+            <div>
+                <h1>A place for coffee, friends, and fun</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis</p>
+            </div>
+        </div>
+        <div class="item item-2">
+            <div class="shape-2"></div>
+            <div>
+                <h1>Where the coffee never runs out</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis</p>
+            </div>
+        </div>
+        <div class="item item-3">
+            <div class="shape-2"></div>
+            <div>
+                <h1>Coffee, the perfect way to start your day!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam debitis</p>
+            </div>
+        </div>
+    </div>
+
 
     <div class="container-fluid wrapper2 p-0">
         <div class="row g-0">
@@ -158,11 +186,11 @@
         <div class="shade"></div>
         <div class="address">
             <div>
-                <img src="photos/image12.png" alt="logo" style="margin-right: 12px;"><strong>PHONE :</strong>
-                    +88019 339 702 520
+                <img src="photos/image12.png" alt="logo" style="margin-right: 12px;"><span><strong>PHONE :</strong>
+                    +88019 339 702 520</span>
             </div>
             <div>
-                <img src="photos/image13.png" alt="logo" style="margin-right: 12px;"><strong>ADDRESS :</strong> kaloor, kochi, kerala
+                <img src="photos/image13.png" alt="logo" style="margin-right: 12px;"><span><strong>ADDRESS :</strong> kaloor, kochi, kerala</span>
             </div>
             <form>
                 <div class="input-group">
@@ -187,6 +215,7 @@
 
     <script src="bootstrap-5.0.2-dist/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         function myFunction(){
             var x = document.getElementById("myLInks");
@@ -212,6 +241,16 @@
                 x.style.display = "none";
             }
         }
+        $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin: 0,
+    nav:true,
+    responsive:{
+        0:{
+            items:1
+        }
+    }
+})
     </script>
 </body>
 
