--- a/index.html
+++ b/index.html
@@ -58,6 +58,58 @@
     </div>
 
 
+    <div class="container-fluid wrapper3">
+        <span class="menu-label">Menu</span>
+        <h1>POPULAR MENU</h1>
+        <div class="row g-0">
+            <div class="col-md-6 mt-5">
+                <div class="menu">
+                    <img src="photos/image18.png" alt="menu">
+                    <span class="text">Frappuccino And Frappe</span>
+                    <span class="price">RS: 700</span>
+                </div>
+            </div>
+            <div class="col-md-6 mt-5">
+                <div class="menu">
+                    <img src="photos/image19.png" alt="menu">
+                    <span class="text">Americano Rosted GRED</span>
+                    <span class="price">RS: 700</span>
+                </div>
+            </div>
+            <div class="col-md-6 mt-5">
+                <div class="menu">
+                    <img src="photos/image20.png" alt="menu">
+                    <span class="text">JAPANIS COFFEE GRED</span>
+                    <span class="price">RS: 700</span>
+                </div>
+            </div>
+            <div class="col-md-6 mt-5">
+                <div class="menu">
+                    <img src="photos/image21.png" alt="menu">
+                    <span class="text">coffee with icecream</span>
+                    <span class="price">RS: 700</span>
+                </div>
+            </div>
+            <div class="col-md-6 mt-5">
+                <div class="menu">
+                    <img src="photos/image22.png" alt="menu">
+                    <span class="text">golden cappuccino</span>
+                    <span class="price">RS: 700</span>
+                </div>
+            </div>
+            <div class="col-md-6 mt-5">
+                <div class="menu">
+                    <img src="photos/image23.png" alt="menu">
+                    <span class="text">VIRGIN COFFEE GRED</span>
+                    <span class="price">RS: 700</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div class="container-fluid wrapper2 p-0">
         <div class="row g-0">
             <div class="col-md-6 border border-0" style="background-color: #13131A;">
