--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="topnav">
+    <div class="topnav" style="overflow-x: hidden;">
         <a href="#home" class="logo">
             <img src="photos/image1.png" alt="logo" class="brand">
         </a>
@@ -33,7 +33,7 @@
     </div>
 
 
-    <div class="owl-carousel owl-theme">
+    <div class="owl-carousel owl-theme" style="overflow-x: hidden;">
         <div class="item item-1">
             <div class="shape-2"></div>
             <div>
@@ -58,7 +58,7 @@
     </div>
 
 
-    <div class="container-fluid wrapper3">
+    <div class="container-fluid wrapper3" style="overflow-x: hidden;">
         <span class="menu-label">Menu</span>
         <h1>POPULAR MENU</h1>
         <div class="row g-0">
@@ -110,7 +110,7 @@
 
 
 
-    <div class="container-fluid wrapper2 p-0">
+    <div class="container-fluid wrapper2 p-0" style="overflow-x: hidden;">
         <div class="row g-0">
             <div class="col-md-6 border border-0" style="background-color: #13131A;">
                 <img src="photos/image10.jpeg" alt="photo" class="image-size">
@@ -126,7 +126,7 @@
 
 
 
-    <div class="container-fluid wrapper">
+    <div class="container-fluid wrapper" style="overflow-x: hidden;">
         <div class="row">
             <div class="col-sm-6 col-lg-4 col-wrapper">
                 <div class="card card-1">
@@ -199,7 +199,7 @@
 
 
 
-    <section class="contact-us">
+    <section class="contact-us" style="overflow-x: hidden;">
         <div class="container-fluid p-0">
             <div class="row g-0">
                 <div class="col-sm-6 frame-container">
@@ -234,7 +234,7 @@
     </section>
 
 
-    <div class="container-fluid footer">
+    <div class="container-fluid footer" style="overflow-x: hidden;">
         <div class="shade"></div>
         <div class="address">
             <div>
